BARC UAT/src/objects/Inventory_Product__c.object
<CustomObject>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Inventory Products</relationshipLabel>
        <relationshipName>Inventory_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Added_To_Kitting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Added To Kitting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Cost_N__c</fullName>
        <label>Product Cost*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Cost__c</fullName>
        <formula>Inventory__r.Product__r.Product_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receive_Date__c</fullName>
        <label>Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>Not Ok</fullName>
                </value>
                <value>
                    <fullName>Retest</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Faulty</fullName>
                </value>
                <value>
                    <fullName>Write-Off</fullName>
                </value>
                <value>
                    <fullName>In Transit (Active)</fullName>
                </value>
                <value>
                    <fullName>Faulty In Transit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Inventory Products</relationshipLabel>
        <relationshipName>Inventory_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Inventory Products</relationshipLabel>
        <relationshipName>Inventory_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory Product</label>
    <nameField>
        <label>Inventory Product Sr No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>